[gd_scene load_steps=31 format=3 uid="uid://cns602t8rqrrf"]

[ext_resource type="Script" path="res://scenes/cauldron.gd" id="1_fypk7"]
[ext_resource type="Texture2D" uid="uid://byisqpddkdge7" path="res://assets/caldero/fondoNoche.webp" id="2_28spt"]
[ext_resource type="Texture2D" uid="uid://qgyrdcqgc0ra" path="res://assets/caldero/caldero.png" id="2_chyaa"]
[ext_resource type="Texture2D" uid="uid://b8gqu8s3igmt" path="res://assets/caldero/mesa.png" id="3_d6mtc"]
[ext_resource type="Texture2D" uid="uid://csnkcoev2qa34" path="res://assets/caldero/Pocion1.png" id="4_mstxl"]
[ext_resource type="Texture2D" uid="uid://dqwsdhtbyd5u3" path="res://assets/caldero/Pocion2.png" id="5_o0lnv"]
[ext_resource type="Texture2D" uid="uid://cryyv0ex71oyt" path="res://assets/caldero/Pocion3.png" id="6_6wn1w"]
[ext_resource type="Texture2D" uid="uid://4xvf2tppjjyb" path="res://assets/caldero/Pocion4.png" id="7_v2anf"]

[sub_resource type="SpriteFrames" id="SpriteFrames_flfaj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_chyaa")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cjr05"]
bg_color = Color(0.94902, 0.862745, 0.760784, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ce6yh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_51umd"]

[sub_resource type="Animation" id="Animation_xum38"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(73.635, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(66.69, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_e50d3"]
resource_name = "verter pocima"
length = 2.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(73.635, -0.25, 0, 0.25, 0, 247.165, -0.25, 0, 0.25, 0, 73.635, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1, 1.96667)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(66.69, -0.25, 0, 0.25, 0, 93.765, -0.25, 0, 0.25, 0, 66.69, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1, 1.96667)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1.59349, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.0416667, 1, 2.00833)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s6r6e"]
_data = {
"RESET": SubResource("Animation_xum38"),
"verter pocima": SubResource("Animation_e50d3")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d02hx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xjt4a"]

[sub_resource type="Animation" id="Animation_2vuuc"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(79, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(75, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_bt3v7"]
resource_name = "verterPocima2"
length = 2.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(79, -0.25, 0, 0.25, 0, -65.058, -0.25, 0, 0.25, 0, -209.115, -0.25, 0, 0.25, 0, 79, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(75, -0.25, 0, 0.25, 0, 16.812, -0.25, 0, 0.25, 0, 77.325, -0.25, 0, 0.25, 0, 75, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -1.5516, -0.25, 0, 0.25, 0, -2.61276, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t5nlc"]
_data = {
"RESET": SubResource("Animation_2vuuc"),
"verterPocima2": SubResource("Animation_bt3v7")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_43lif"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b5sk1"]

[sub_resource type="Animation" id="Animation_d3dj7"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(70, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(70, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_syp3r"]
resource_name = "verterPocima3"
length = 2.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(70, -0.25, 0, 0.25, 0, 163, -0.25, 0, 0.25, 0, 339, -0.25, 0, 0.25, 0, 70, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.633333, 1, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(70, -0.25, 0, 0.25, 0, -394, -0.25, 0, 0.25, 0, -377, -0.25, 0, 0.25, 0, -394, -0.25, 0, 0.25, 0, 70, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.733333, 1, 1.26667, 2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1.32283, -0.25, 0, 0.25, 0, 1.95826, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.733333, 1, 2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7m4h1"]
_data = {
"RESET": SubResource("Animation_d3dj7"),
"verterPocima3": SubResource("Animation_syp3r")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w3uts"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_he8h3"]

[sub_resource type="Animation" id="Animation_2d25m"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(72.53, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(64.675, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_ikwyp"]
resource_name = "verterPocima4"
length = 2.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(72.53, -0.25, 0, 0.25, 0, -183, -0.25, 0, 0.25, 0, 72.53, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1, 1.8)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(64.675, -0.25, 0, 0.25, 0, -378, -0.25, 0, 0.25, 0, 64.675, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1, 1.8)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -2.28464, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1, 1.8)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g0om0"]
_data = {
"RESET": SubResource("Animation_2d25m"),
"verterPocima4": SubResource("Animation_ikwyp")
}

[node name="cauldron" type="Node2D"]
script = ExtResource("1_fypk7")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(972, 318)
scale = Vector2(2.878, 1.685)
texture = ExtResource("2_28spt")

[node name="Mesa" type="Sprite2D" parent="."]
position = Vector2(966, 717)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_d6mtc")

[node name="sprite_cauldron" type="AnimatedSprite2D" parent="."]
position = Vector2(966, 521)
rotation = -0.0174533
scale = Vector2(0.6, 0.6)
sprite_frames = SubResource("SpriteFrames_flfaj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 1639.0
offset_top = 109.0
offset_right = 2241.0
offset_bottom = 231.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 51
theme_override_styles/normal = SubResource("StyleBoxFlat_cjr05")
button_mask = 3
text = "cliente        caldero"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -282.0
offset_right = 450.0
offset_bottom = 336.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 300

[node name="buttons_container_up" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 600

[node name="Button_A" type="Button" parent="CanvasLayer/Control/VBoxContainer/buttons_container_up"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_ce6yh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_51umd")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control/VBoxContainer/buttons_container_up/Button_A"]
position = Vector2(73.635, 66.69)
scale = Vector2(0.37, 0.37)
texture = ExtResource("4_mstxl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control/VBoxContainer/buttons_container_up/Button_A"]
libraries = {
"": SubResource("AnimationLibrary_s6r6e")
}

[node name="Button_B" type="Button" parent="CanvasLayer/Control/VBoxContainer/buttons_container_up"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/focus = SubResource("StyleBoxEmpty_d02hx")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_xjt4a")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control/VBoxContainer/buttons_container_up/Button_B"]
position = Vector2(79, 75)
scale = Vector2(0.37, 0.37)
texture = ExtResource("5_o0lnv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control/VBoxContainer/buttons_container_up/Button_B"]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_t5nlc")
}

[node name="buttons_container_down" type="HBoxContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 600

[node name="Button_C" type="Button" parent="CanvasLayer/Control/VBoxContainer/buttons_container_down"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_43lif")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_b5sk1")
flat = true
icon_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control/VBoxContainer/buttons_container_down/Button_C"]
position = Vector2(70, 70)
scale = Vector2(0.395, 0.395)
texture = ExtResource("6_6wn1w")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control/VBoxContainer/buttons_container_down/Button_C"]
libraries = {
"": SubResource("AnimationLibrary_7m4h1")
}

[node name="Button_D" type="Button" parent="CanvasLayer/Control/VBoxContainer/buttons_container_down"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/focus = SubResource("StyleBoxEmpty_w3uts")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_he8h3")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Control/VBoxContainer/buttons_container_down/Button_D"]
position = Vector2(72.53, 64.675)
scale = Vector2(0.49, 0.49)
texture = ExtResource("7_v2anf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control/VBoxContainer/buttons_container_down/Button_D"]
libraries = {
"": SubResource("AnimationLibrary_g0om0")
}

[connection signal="pressed" from="CanvasLayer/Control/Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Control/VBoxContainer/buttons_container_up/Button_A" to="." method="_on_button_a_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/buttons_container_up/Button_A" to="." method="_on_button_a_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/buttons_container_up/Button_B" to="." method="_on_button_b_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/buttons_container_down/Button_C" to="." method="_on_button_c_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/buttons_container_down/Button_D" to="." method="_on_button_d_pressed"]
